Add and modify global exception